--- a/templates/header.html
+++ b/templates/header.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Header</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
-<body>
+<body style="padding-top:82px">
     <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <header class="fixed-top container d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom bg-dark" style="width:66.6%">
             <div class="col-md-3 mb-2 mb-md-0">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                     <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
@@ -21,14 +22,15 @@
                     <li><a href="{{ url_for('all_movies') }}" class="nav-link px-2 text-top-movies">Your Top Movies</a></li>
                 {% endif %}
                 <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                <li><a href="{{ url_for('about') }}" class="nav-link px-2 text-white" >About</a></li>
             </ul>
 
             {% if not current_user.is_authenticated %}
-                <div class="col-md-3 text-end">
-                    <button type="button" class="btn btn-outline-primary me-2 btn-login" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                    <button type="button" class="btn btn-primary btn-signup" data-bs-toggle="modal" data-bs-target="#signupModal">Sign-up</button>
+                <div class="col-md-3 text-end" style="padding-left:120px">
+                    <button type="button" class="btn btn-outline-primary btn-login" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+                    <button type="button" class="btn btn-primary btn-signup" data-bs- ="modal" data-bs-target="#signupModal">Sign-up</button>
                 </div>
+
             {% else %}
                 <div class="col-md-3 text-end">
                     <a href="{{ url_for('logout') }}" class="btn btn-primary btn-signup">Log out</a>
