--- a/templates/select.html
+++ b/templates/select.html
@@ -16,6 +16,10 @@
             <div class="back back-dark">
                 <div>
                     <div class="title">{{ movie.title }} <span class="release_date">({{ movie.release_date if movie.release_date else "N/A" }})</span></div>
+                    <div class="rating">
+                                <label>{{  movie.vote_average | round(1) }}</label>
+                                <i class="fas fa-star star"></i>
+                    </div>
                     <p class="overview">{{ movie.overview[:100] if movie.overview else "No description available." }}...</p>
                     <a href="{{ url_for('find_movie', id=movie.id) }}" class="button button-dark" id="addButton">Select</a>
                 </div>
