--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
             {% if not current_user.is_authenticated %}
                 <div class="col-md-3 text-end" style="padding-left:120px">
                     <button type="button" class="btn btn-outline-primary btn-login" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-                    <button type="button" class="btn btn-primary btn-signup" data-bs- ="modal" data-bs-target="#signupModal">Sign-up</button>
+                    <button type="button" class="btn btn-primary btn-signup" data-bs-toggle="modal" data-bs-target="#signupModal">Sign-up</button>
                 </div>
 
             {% else %}
