--- a/templates/all-movies.html
+++ b/templates/all-movies.html
@@ -46,6 +46,7 @@
     <a href="{{url_for('add_movie')}}" class="button-add" id="addButton">Add Movie</a>
     <div class="popcorn-bucket"></div> <!-- Punga de popcorn la hover -->
 </div>
+</div>
 
 
 
