--- a/templates/header.html
+++ b/templates/header.html
@@ -42,6 +42,10 @@
         </div>
     {% endif %}
 
+    <div class="mobile-title d-md-none">
+        My Top Movies
+    </div>
+
     <!-- Buton meniu mobil -->
     <button class="navbar-toggler d-md-none text-white" id="mobile-menu-button">
         ☰
