--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -725,4 +725,10 @@
         margin-top: 10px;
         width: 100%;
     }
+}@media (min-width: 768px) {
+    .col-md-3 {
+        flex: 0 0 auto !important;
+        width: 13% !important; /* Forțăm Bootstrap să ia în considerare noua lățime */
+    }
 }
+
