--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -453,7 +453,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 5px;
     margin-top: 30px;
 }
 
@@ -731,4 +731,23 @@
         width: 13% !important; /* Forțăm Bootstrap să ia în considerare noua lățime */
     }
 }
+
+.movies-grid.grid-view {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1.5rem;
+}
+
+.movies-grid.list-view {
+  display: flex;
+  flex-direction: column;
+  gap:1px
+}
+.movies-grid.grid-view .card-grid {
+    width: 100% ;
+    margin: 0 ;
+    max-width: 100%;
+}
+
+
 
