--- a/templates/header.html
+++ b/templates/header.html
@@ -10,14 +10,8 @@
 <body style="padding-top:82px">
 
 <header class="fixed-top container-fluid d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom bg-dark px-3">
-    <!-- Logo -->
-    <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex text-decoration-none">
-            <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-        </a>
-    </div>
+
+    <div class="col-md-3 mb-2 mb-md-0"></div>
 
     <!-- Titlul site-ului pe mobil -->
     <div class="mobile-title d-md-none text-white text-center flex-grow-1">
@@ -32,7 +26,7 @@
         {% else %}
             <li><a href="{{ url_for('home', flash_login='movies_login') }}" class="nav-link px-2 text-top-movies">Your Top Movies</a></li>
         {% endif %}
-        <li><a href="{{ url_for('about') }}" class="nav-link px-2 text-white">About</a></li>
+        <li><a href="{{ url_for('about') }}" class="nav-link px-2 link-secondary text-white">About</a></li>
     </ul>
 
     <!-- Butoane Login / Signup (desktop) -->
